--- a/fitness/templates/fitness/dashboard.html
+++ b/fitness/templates/fitness/dashboard.html
@@ -181,10 +181,17 @@
                         {% for achievement in achievements|slice:":4" %}
                             <div class="col-md-6 mb-3">
                                 <div class="text-center">
-                                    <img src="{{ achievement.achievement.badge_image.url }}" 
-                                         alt="{{ achievement.achievement.name }}"
-                                         class="img-fluid mb-2"
-                                         style="max-width: 100px;">
+                                    {% if achievement.achievement.badge_image %}
+                                        <img src="{{ achievement.achievement.badge_image.url }}" 
+                                             alt="{{ achievement.achievement.name }}"
+                                             class="img-fluid mb-2"
+                                             style="max-width: 100px;">
+                                    {% else %}
+                                        <img src="https://placehold.co/100x100/607D8B/FFFFFF?text={{ achievement.achievement.name|slice:':1' }}" 
+                                             alt="{{ achievement.achievement.name }}"
+                                             class="img-fluid mb-2"
+                                             style="max-width: 100px;">
+                                    {% endif %}
                                     <h6>{{ achievement.achievement.name }}</h6>
                                     <small class="text-muted">{{ achievement.earned_at|date:"M d, Y" }}</small>
                                 </div>
